Fix overflow x issues, but navbar has issues now

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -65,7 +65,7 @@
     position: absolute;
     height: 200px;
     width: auto;
-    right: -40px;
+    right: 0;
     top: 0;
     z-index: -1;
     opacity: 30%;
