--- a/src/css/p2pi.css
+++ b/src/css/p2pi.css
@@ -27,7 +27,7 @@
     position: absolute;
     height: 200px;
     width: auto;
-    right: -40px;
+    right: 0;
     z-index: 0;
     bottom: 0;
     opacity: 70%;
